add_subdirectory(demo)
add_subdirectory(eigen)
add_subdirectory(Pangolin)
add_subdirectory(g2o)
add_subdirectory(slamdemo)
add_subdirectory(qt)
add_subdirectory(cmakedemo)
add_subdirectory(qt-serial)
add_subdirectory(tbb)
add_subdirectory(cuda)
add_subdirectory(Ceres)
# add_subdirectory(OpenCV)
# add_subdirectory(qt-serial1)
# add_subdirectory(yolov5-tensorRtx)


add_subdirectory(homework)
